--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
 Flask-CORS==4.0.0
-SQLAlchemy==2.0.23
 python-dotenv==1.0.0
 requests==2.31.0
 pytest==7.4.3
